# python-notes

./: .gitignore  README.md
basics/: blackjack.py  decorated_fibonacci.py  tictactoe.py
job_portal/: README.md  pyproject.toml
job_portal/job_portal/: app.py
job_portal/job_portal/templates/: home.html  job_item.html  job_page.html
job_portal/job_portal/templates/partials/: footer.html  tailwind_config.html
reminders/: README.md  app.py  pyproject.toml
reminders/reminders/: __init__.py  auth.py  models.py  views.py
reminders/reminders/static/: index.js
reminders/reminders/templates/: base.html  home.html  login.html  sign_up.html
reminders/tests/: conftest.py  pytest.ini  test_auth.py  test_views.py  utils.py
testing/: README.md  pylintrc  pyproject.toml
testing/testing/: Animal.py  Services.py  Shape.py  utils.py
testing/tests/: conftest.py  pytest.ini  test_basics.py  test_fixtures.py  test_markers.py  test_mocking.py  test_parameterized.py  test_utils.py
weather/: README.md  config.json  pyproject.toml
weather/tests/: main.py  test_get_weather.py
weather/weather/: consts.py  get_weather.py  weather_api.py
