[tool.poetry]
name = "job_portal"
version = "0.1.0"
description = "job portal application"
authors = ["singhAmandeep007 <amandeeps0803@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
gunicorn = "^22.0.0"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
