[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["singhAmandeep007 <amandeeps0803@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
