[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["singhAmandeep007 <amandeeps0803@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
pytest-html = "^4.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
requests-mock = "^1.12.1"

[tool.poetry.scripts]
test = "tests.main:main"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "artifacts/pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)s] %(filename)s:%(lineno)d %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_auto_indent = true



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
